--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <li><a href="./map.html">Model Visualization</a></li>
       <li><a href="./vr-model.html">VR Zone</a></li>
       <li><a href="#"></a></li>
-      <li><a href="./documentation.html">Documentation</a></li>
+      <li><a href="visualization/data_analysis.html">Documentation and Methodology</a></li>
     </ul>
   </div>
   <script src="source.js" charset="utf-8"></script>
