fix: home page fix

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="css1/style.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 <link rel="icon" href="favicon.ico" type="image/x-icon">
-    <title>The Millionth Voice</title>
+    <title>NASA SPACE APPS CHALLENGE - TEAM PSEUDO MODE</title>
   </head>
   <body>
 
@@ -25,7 +25,7 @@
       <a href="./documentation.html">Shoot!</a>
     </div>
     <ul class="social">
-      <li><a href="theplanetillusion@gmail.com"><img src="https://i.ibb.co/y8q5sKK/60543-1.png"></a></li>
+      <li><a href="maito:appiahboaduprince@gmail.com"><img src="https://i.ibb.co/y8q5sKK/60543-1.png"></a></li>
       <li><a href="#"><img src="https://i.ibb.co/Wnxq2Nq/twitter.png"></a></li>
       <li><a href="#"><img src="https://i.ibb.co/ySwtH4B/instagram.png"></a></li>
     </ul>
