feat: map update

--- a/map.html
+++ b/map.html
@@ -7,6 +7,6 @@
     <title>MAP VIEWING POINT</title>
 </head>
 <body>
-    
+    <embed src="https://soshgic.maps.arcgis.com/apps/dashboards/e0a9d7d27507468c97884ee0e8e6ccd6" style="width:100%; height: 100vh;">
 </body>
 </html>
