build: website complete - hope we don't come back to this again!

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
   <div class="menu">
     <ul>
       <li><a href="./index.html">Home</a></li>
-      <li><a href="./map.html">Model Visualization</a></li>
-      <li><a href="./vr-model.html">VR Zone</a></li>
+      <li><a href="./map.html">Live Map Visualization</a></li>
+      <li><a href="./vr-model.html">VR Zone for Robot</a></li>
       <li><a href="#"></a></li>
-      <li><a href="visualizations/data_analysis.html">Methodology</a></li>
+      <li><a href="visualizations/data_analysis.html">Documentation</a></li>
     </ul>
   </div>
   <script src="source.js" charset="utf-8"></script>
